# contabot-os

./: .env.example  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  pyproject.toml  vercel.json
.github/workflows/: ci.yml
api/: chat.py
contabot/: __init__.py  config.py
contabot/accounting/: __init__.py  cac.py  churn.py  dashboard.py  ltv.py  migration.py  models.py
contabot/atencion/: __init__.py  intents.py  responder.py
contabot/bot/: __init__.py  handler.py  migration.py  onboarding.py  server.py  weekly_report.py
contabot/db/: __init__.py  connection.py  constants.py  migration.py  models.py  session.py
contabot/fiscal/: __init__.py  calculator.py  calendar.py  client_reports.py  expense_intake.py  expenses.py  financial_report.py  report.py
scripts/: setup.py
site/: index.html
tests/: test_basic.py  test_e2e.py
